hello-world-tls-ca.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: hello-world-tls
