mongodb_express_depl.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: mongodb
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: mongodb
  name: mongodb-depl
  labels:
    app: mongodb-depl
spec:
  selector:
    matchLabels:
      app: mongodb
  template:
    metadata:
      labels:
        app: mongodb
    spec:
      containers:
      - name: mongodb
        image: mongo
        resources:
          limits:
            memory: "128Mi"
            cpu: "100m"
        ports:
        - containerPort: 27017 
---
apiVersion: v1
kind: Service
metadata:
  namespace: mongodb
  name: mongodb-svc
spec:
  selector:
    app: mongodb
  ports:
  - port: 27017
    targetPort: 27017
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: mongodb
  name: mongo-express
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongo-express
  template:
    metadata:
      labels:
        app: mongo-express
    spec:
      containers:
      - name: mongo-express
        image: mongo-express
        resources:
          limits:
            memory: "128Mi"
            cpu: "100m"
        ports:
        - containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  namespace: mongodb
  name: mongo-express-svc
spec:
  type: LoadBalancer
  selector:
    app: mongo-express
  ports:
  - protocol: TCP
    port: 8081
    targetPort: 8081
    nodePort: 32000 # must between 30000-32767
